--- a/src/docs/asciidoc/board.adoc
+++ b/src/docs/asciidoc/board.adoc
@@ -1,10 +1,23 @@
 [[Board-API]]
 == Board-API
 
-[[Board-List]]
-=== Board 리스트 조회
+[[Create-Board]]
+=== Board 생성
+operation::create-board[sn ippets='request-fields,curl-request, http-request, request-headers, http-response, response-headers, response-fields, links']
 
+[[Modify-Board]]
+=== Board 수정
+operation::modify-board[sn ippets='request-fields,curl-request, http-request, request-headers, http-response, response-headers, response-fields, links']
+
+[[Delete-Board]]
+=== Board 삭제
+operation::delete-board[sn ippets='request-fields,curl-request, http-request, request-headers, http-response, response-headers, response-fields, links']
+
+[[Get-Board]]
+=== Board 조회
 operation::get-board-info-by-id[sn ippets='request-fields,curl-request, http-request, request-headers, http-response, response-headers, response-fields, links']
 
-operation::get-board-list[sn ippets='request-fields,curl-request, http-request, request-headers, http-response, response-headers, response-fields, links']
+[[Get-Board-List]]
+=== 유저별 Board 리스트 조회
+operation::get-board-list-by-user[sn ippets='request-fields,curl-request, http-request, request-headers, http-response, response-headers, response-fields, links']
 
